[package]
name = "s-proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libretro-rs = { git = "https://github.com/VenomPaco/libretro-rs/" }
bitvec = "1.0.1"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
